# ChangeLog for media-fonts/dejavu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.111 2008/05/19 12:56:50 pva Exp $

*dejavu-2.25 (19 May 2008)

  19 May 2008; Peter Volkov <pva@gentoo.org> +dejavu-2.25.ebuild:
  Version bump.

*dejavu-2.23 (22 Jan 2008)

  22 Jan 2008; <pva@gentoo.org> -dejavu-2.18-r1.ebuild, -dejavu-2.20.ebuild,
  +dejavu-2.23.ebuild:
  Version bump. Removed old.

  08 Jan 2008; <pva@gentoo.org> dejavu-2.18-r1.ebuild, dejavu-2.20.ebuild,
  dejavu-2.21.ebuild, dejavu-2.22.20071220.2156.ebuild:
  FONT_CONF now array, bug 201834.

  21 Dec 2007; <pva@gentoo.org> -dejavu-2.22.ebuild:
  Cleaned broken version.

*dejavu-2.22.20071220.2156 (21 Dec 2007)

  21 Dec 2007; <pva@gentoo.org> +dejavu-2.22.20071220.2156.ebuild:
  Version bump to snapshot. Fixes metadata problem in the condensed fonts, bug
  #202255. Thank Matt Whitlock, Peter Henriksson and Guillaume Castagnino for
  report.

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> dejavu-2.21.ebuild:
  amd64 stable wrt #202120

  14 Dec 2007; nixnut <nixnut@gentoo.org> dejavu-2.21.ebuild:
  Stable on ppc wrt bug 202120

  14 Dec 2007; Markus Rothe <corsair@gentoo.org> dejavu-2.21.ebuild:
  Stable on ppc64; bug #202120

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> dejavu-2.21.ebuild:
  alpha/ia64 stable wrt #202120

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org> dejavu-2.21.ebuild:
  stable x86, bug 202120

  13 Dec 2007; Ferris McCormick <fmccor@gentoo.org> dejavu-2.21.ebuild:
  Sparc stable --- Bug #202120 --- checked with gucharmap for sanity.

*dejavu-2.22 (13 Dec 2007)

  13 Dec 2007; <pva@gentoo.org> -dejavu-2.19.ebuild, +dejavu-2.22.ebuild:
  Version bump. Remove old.

  06 Nov 2007; Markus Rothe <corsair@gentoo.org> dejavu-2.20.ebuild:
  Stable on ppc64; bug #197728

  04 Nov 2007; Lars Weiler <pylon@gentoo.org> dejavu-2.20.ebuild:
  stable ppc, bug #197728
