@@ -1,6 +1,11 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.111 2008/05/19 12:56:50 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.112 2008/06/01 21:28:00 loki_val Exp $
+
+*dejavu-2.25-r1 (01 Jun 2008)
+
+  01 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> +dejavu-2.25-r1.ebuild:
+  Commit masked version for keywording and testing
 
 *dejavu-2.25 (19 May 2008)
 
